--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mindspa-ui-library",
+  "name": "mindspa-ui-components",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
