--- a/package.json
+++ b/package.json
@@ -1,29 +1,54 @@
 {
-  "name": "mindspa-ui-components",
+  "name": "zephyr-ui-components",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/zephyr-ui.umd.cjs",
+  "module": "./dist/zephyr-ui.js",
+  "exports": {
+    ".": {
+      "import": "./dist/zephyr-ui.js",
+      "require": "./dist/zephyr-ui.umd.cjs"
+    }
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "prebuild": "rm -rf dist",
+    "build": "tsc --p ./tsconfig-build.json && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "prepublish": "npm run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "dependencies": {
+    "@types/styled-components": "^5.1.34",
+    "components": "^0.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "styled": "^1.0.0",
+    "styled-components": "^6.1.13",
+    "vite-tsconfig-paths": "5.0.1"
+  },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^26.0.1",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.6",
+    "@types/node": "^22.5.5",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "@typescript-eslint/parser": "^8.6.0",
+    "@vitejs/plugin-react": "4.3.1",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "eslint-plugin-react-refresh": "0.4.12",
     "rollup": "^3.29.5",
     "rollup-plugin-dts": "^6.1.1",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "vite": "^5.4.1",
+    "vite-plugin-dts": "^4.2.1"
   }
 }
