--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,31 @@
 {
     "compilerOptions": {
-      "target": "es5",
-      "esModuleInterop": true,
-      "forceConsistentCasingInFileNames": true,
-      "strict": true,
-      "skipLibCheck": true,
-      "jsx": "react",
-      "module": "ESNext",
-      "declaration": true,
-      "declarationDir": "types",
-      "sourceMap": true,
-      "outDir": "dist",
-      "moduleResolution": "node",
-      "allowSyntheticDefaultImports": true,
-      "emitDeclarationOnly": true
+        "target": "ES6",
+        "lib": [
+            "ES6",
+            "DOM"
+        ],
+        "jsx": "react-jsx",
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "skipLibCheck": true,
+        "module": "ESNext",
+        "declaration": true,
+        "declarationDir": "types",
+        "sourceMap": true,
+        "outDir": "dist",
+        "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true,
+        "emitDeclarationOnly": true,
+        "types": ["styled-components"]
+
     },
-    "include": ["src"],
-    "exclude": ["node_modules", "dist"]
-  }
+    "include": [
+        "lib","src"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist"
+    ]
+}
