--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "build": "tsc --p ./tsconfig-build.json && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "keywords": [],
   "author": "",
@@ -31,10 +33,18 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "styled": "^1.0.0",
-    "styled-components": "^6.1.13",
-    "vite-tsconfig-paths": "5.0.1"
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.9.0",
+    "@storybook/addon-essentials": "^8.3.5",
+    "@storybook/addon-interactions": "^8.3.5",
+    "@storybook/addon-links": "^8.3.5",
+    "@storybook/addon-onboarding": "^8.3.5",
+    "@storybook/blocks": "^8.3.5",
+    "@storybook/react": "^8.3.5",
+    "@storybook/react-vite": "^8.3.5",
+    "@storybook/test": "^8.3.5",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
@@ -45,10 +55,13 @@
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "0.4.12",
+    "eslint-plugin-storybook": "^0.9.0",
     "rollup": "^3.29.5",
     "rollup-plugin-dts": "^6.1.1",
+    "storybook": "^8.3.5",
     "typescript": "^5.6.2",
     "vite": "^5.4.1",
-    "vite-plugin-dts": "^4.2.1"
+    "vite-plugin-dts": "^4.2.1",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
