--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
   "description": "",
   "dependencies": {
     "@types/styled-components": "^5.1.34",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "components": "^0.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "styled": "^1.0.0",
     "styled-components": "^6.1.13",
+    "tailwind-merge": "^2.5.4",
     "vite-tsconfig-paths": "5.0.1"
   },
   "devDependencies": {
@@ -41,12 +44,15 @@
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "@typescript-eslint/parser": "^8.6.0",
     "@vitejs/plugin-react": "4.3.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "0.4.12",
+    "postcss": "^8.4.47",
     "rollup": "^3.29.5",
     "rollup-plugin-dts": "^6.1.1",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.6.2",
     "vite": "^5.4.1",
     "vite-plugin-dts": "^4.2.1"
