--- a/zephyr-ui/package.json
+++ b/zephyr-ui/package.json
@@ -11,8 +11,7 @@
   },
   "peerDependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "zephyr-ui-components": "file../.mindspa-ui-components"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
