--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,12 +1,15 @@
 
 name: Pull Request Preview
 on:
-  pull_request:
+  pull_request_target:
     branches:
       - main
 jobs:
   build_and_preview:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
+      contents: read
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
